{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 28,
  "lineage": "01310168-54d3-41b3-d833-6026e86df380",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bookings-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022d03f649d12a49d",
            "arn": "arn:aws:ec2:ap-south-1:403007782185:instance/i-01e2857f96982c263",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e2857f96982c263",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f07d33278a434b33",
            "private_dns": "ip-10-0-1-91.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.91",
            "public_dns": "ec2-43-205-207-176.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.207.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-014d88295a64f31f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050639623f3e74a0c",
            "tags": {
              "Environment": "Dev",
              "Name": "bookings-Servers"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "bookings-Servers"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024498b5aee7897a5"
            ]
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.alb-public-subnet",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "orders-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022d03f649d12a49d",
            "arn": "arn:aws:ec2:ap-south-1:403007782185:instance/i-01c55e713f88f6410",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c55e713f88f6410",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0135a3e9dd095888d",
            "private_dns": "ip-10-0-1-57.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-35-154-102-115.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.102.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-052ee88d8577bb202",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050639623f3e74a0c",
            "tags": {
              "Environment": "Dev",
              "Name": "Orders-servers"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Orders-servers"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024498b5aee7897a5"
            ]
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.alb-public-subnet",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "payments-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022d03f649d12a49d",
            "arn": "arn:aws:ec2:ap-south-1:403007782185:instance/i-08de2ec8a17b2b361",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08de2ec8a17b2b361",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-060dcc887b8a221eb",
            "private_dns": "ip-10-0-1-120.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.120",
            "public_dns": "ec2-3-108-44-179.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.44.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041ad6fe6c083072e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050639623f3e74a0c",
            "tags": {
              "Environment": "Dev",
              "Name": "Payments-Servers"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Payments-Servers"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024498b5aee7897a5"
            ]
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.alb-public-subnet",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "alb-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:403007782185:internet-gateway/igw-001a971f4406c82f1",
            "id": "igw-001a971f4406c82f1",
            "owner_id": "403007782185",
            "tags": {
              "Name": "igw-alb"
            },
            "tags_all": {
              "Name": "igw-alb"
            },
            "vpc_id": "vpc-08754d132d8893f24"
          },
          "dependencies": [
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:loadbalancer/app/application-lb/419753384c526557",
            "arn_suffix": "app/application-lb/419753384c526557",
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-lb-366725473.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:loadbalancer/app/application-lb/419753384c526557",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-024498b5aee7897a5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-050639623f3e74a0c"
              },
              {
                "subnet_id": "subnet-09394d2ea2bc95ca9"
              }
            ],
            "subnets": [
              "subnet-050639623f3e74a0c",
              "subnet-09394d2ea2bc95ca9"
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "alb-tf"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "alb-tf"
            },
            "vpc_id": "vpc-08754d132d8893f24",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.alb-public-subnet",
            "aws_subnet.alb-public-subnet-1b",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "orders-listners",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:listener/app/application-lb/419753384c526557/d72e57098c969f66",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:targetgroup/orders-target-group/c36b3a42231d2686",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:listener/app/application-lb/419753384c526557/d72e57098c969f66",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:loadbalancer/app/application-lb/419753384c526557",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.alb-public-subnet",
            "aws_subnet.alb-public-subnet-1b",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:targetgroup/orders-target-group/c36b3a42231d2686",
            "arn_suffix": "targetgroup/orders-target-group/c36b3a42231d2686",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:targetgroup/orders-target-group/c36b3a42231d2686",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "orders-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "orders-target-group"
            },
            "tags_all": {
              "Name": "orders-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08754d132d8893f24"
          },
          "dependencies": [
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg-bookings",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:targetgroup/bookings-target-group/c4d979985d9250b6",
            "arn_suffix": "targetgroup/bookings-target-group/c4d979985d9250b6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:targetgroup/bookings-target-group/c4d979985d9250b6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bookings-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "bookings-target-group"
            },
            "tags_all": {
              "Name": "bookings-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08754d132d8893f24"
          },
          "dependencies": [
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg-payments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:targetgroup/payments-target-group/7b9ddd798f0196a0",
            "arn_suffix": "targetgroup/payments-target-group/7b9ddd798f0196a0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:targetgroup/payments-target-group/7b9ddd798f0196a0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "payments-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "payments-target-group"
            },
            "tags_all": {
              "Name": "payments-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08754d132d8893f24"
          },
          "dependencies": [
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "bookings-tg-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:targetgroup/bookings-target-group/c4d979985d9250b6-20230516085559211600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:targetgroup/bookings-target-group/c4d979985d9250b6",
            "target_id": "i-01e2857f96982c263"
          },
          "dependencies": [
            "aws_instance.bookings-instance",
            "aws_lb_target_group.alb-tg-bookings"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "orders-tg-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:targetgroup/orders-target-group/c36b3a42231d2686-20230516085559619600000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:targetgroup/orders-target-group/c36b3a42231d2686",
            "target_id": "i-01c55e713f88f6410"
          },
          "dependencies": [
            "aws_instance.orders-instance",
            "aws_lb_target_group.alb-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "payments-tg-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:targetgroup/payments-target-group/7b9ddd798f0196a0-20230516085559302000000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:403007782185:targetgroup/payments-target-group/7b9ddd798f0196a0",
            "target_id": "i-08de2ec8a17b2b361"
          },
          "dependencies": [
            "aws_instance.payments-instance",
            "aws_lb_target_group.alb-tg-payments"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alb-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:403007782185:route-table/rtb-06eca9c66ae15f567",
            "id": "rtb-06eca9c66ae15f567",
            "owner_id": "403007782185",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001a971f4406c82f1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08754d132d8893f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.alb-igw",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alb-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e0b4802fb748d78",
            "route_table_id": "rtb-06eca9c66ae15f567",
            "subnet_id": "subnet-050639623f3e74a0c"
          },
          "dependencies": [
            "aws_internet_gateway.alb-igw",
            "aws_route_table.alb-rt",
            "aws_subnet.alb-public-subnet",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:403007782185:security-group/sg-024498b5aee7897a5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024498b5aee7897a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http-allowed",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-group for alb",
            "name_prefix": "",
            "owner_id": "403007782185",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08754d132d8893f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:403007782185:subnet/subnet-050639623f3e74a0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050639623f3e74a0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "403007782185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alb-public-subnet"
            },
            "tags_all": {
              "Name": "alb-public-subnet"
            },
            "vpc_id": "vpc-08754d132d8893f24"
          },
          "dependencies": [
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:403007782185:subnet/subnet-09394d2ea2bc95ca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09394d2ea2bc95ca9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "403007782185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alb-public-subnet"
            },
            "tags_all": {
              "Name": "alb-public-subnet"
            },
            "vpc_id": "vpc-08754d132d8893f24"
          },
          "dependencies": [
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "alb-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:403007782185:vpc/vpc-08754d132d8893f24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae0d4e8e60360596",
            "default_route_table_id": "rtb-0b08b877c270373ca",
            "default_security_group_id": "sg-03dd09d70a3871ab6",
            "dhcp_options_id": "dopt-083720c565318c4ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08754d132d8893f24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b08b877c270373ca",
            "owner_id": "403007782185",
            "tags": {
              "Name": "alb-vpc"
            },
            "tags_all": {
              "Name": "alb-vpc"
            }
          }
        }
      ]
    }
  ]
}